<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>AtmSplashScreen</class>
 <widget class="QMainWindow" name="AtmSplashScreen">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>600</width>
    <height>400</height>
   </rect>
  </property>
  <property name="font">
   <font>
    <pointsize>11</pointsize>
   </font>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <property name="styleSheet">
   <string notr="true"/>
  </property>
  <widget class="QWidget" name="CentralWidget">
   <widget class="QLabel" name="version_label">
    <property name="geometry">
     <rect>
      <x>520</x>
      <y>17</y>
      <width>60</width>
      <height>15</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel{
border: 0px solid black;
}
QLabel{
color: rgb(32, 74, 135);
}</string>
    </property>
    <property name="text">
     <string>v.1.0.1</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
    </property>
   </widget>
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
      <width>580</width>
      <height>380</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background: transparent;



</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
    </property>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
    <widget class="QLabel" name="atm_company_name_label">
     <property name="geometry">
      <rect>
       <x>35</x>
       <y>40</y>
       <width>510</width>
       <height>70</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>DejaVu Sans</family>
       <pointsize>25</pointsize>
       <weight>50</weight>
       <italic>false</italic>
       <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel {
border: 0px solid rgb(32, 74, 135);
}
QLabel{
color: rgb(32, 74, 135);
}</string>
     </property>
     <property name="text">
      <string>Company name</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="atm_label">
     <property name="geometry">
      <rect>
       <x>140</x>
       <y>100</y>
       <width>300</width>
       <height>150</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>FreeSans</family>
       <pointsize>100</pointsize>
       <weight>75</weight>
       <bold>true</bold>
       <underline>false</underline>
       <strikeout>false</strikeout>
       <kerning>false</kerning>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel{
background: transparent;
border: 0px solid black;
}
QLabel{
color: rgb(32, 74, 135);
}</string>
     </property>
     <property name="text">
      <string>ATM</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="text_label">
     <property name="geometry">
      <rect>
       <x>170</x>
       <y>270</y>
       <width>240</width>
       <height>30</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>14</pointsize>
       <underline>false</underline>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel{
border: 0px solid  rgb(32, 74, 135);
}
QLabel{
color: rgb(32, 74, 135);
}</string>
     </property>
     <property name="text">
      <string>press &lt;Enter&gt; to start</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
   <widget class="QPushButton" name="exit_button">
    <property name="geometry">
     <rect>
      <x>15</x>
      <y>15</y>
      <width>20</width>
      <height>20</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Tlwg Mono</family>
      <pointsize>12</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true"/>
    </property>
    <property name="text">
     <string>X</string>
    </property>
   </widget>
   <widget class="QLabel" name="timedate_label">
    <property name="geometry">
     <rect>
      <x>170</x>
      <y>360</y>
      <width>260</width>
      <height>20</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Tlwg Mono</family>
      <pointsize>15</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel {
background: transparent;
border: 0px solid rgb(32, 74, 135);
}
QLabel{
color: rgb(32, 74, 135);
}

</string>
    </property>
    <property name="text">
     <string>...</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
